занес соц. сети под теги ul>li

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <li class="paginator__item">7</li>
                         </ul>
                     </div>
-                </div>  
+                </div>
 
                 <div class="about-us">
                     <img src="#" alt="" class="about-us__img">
@@ -124,10 +124,12 @@
             </nav>
 
             <div class="social">
-                <img src="#" class="social__telegram" alt="telegram">
-                <img src="#" class="social__vk" alt="vk">
-                <img src="#" class="social__facebook" alt="facebook">
-                <img src="#" class="social__instagram" alt="instagram">
+                <ul class="social__list">
+                    <li class="social__item"><img src="#" class="social__telegram" alt="telegram"></li>
+                    <li class="social__item"><img src="#" class="social__vk" alt="vk"></li>
+                    <li class="social__item"><img src="#" class="social__facebook" alt="facebook"></li>
+                    <li class="social__item"><img src="#" class="social__instagram" alt="instagram"></li>
+                </ul>
             </div>
 
             <address class="footer__contacts">
