Сделал внешнее оформление сайта
Внешний вид+позиции соответствуют макету.
На данный момент не справился только с background-image, ибо не знаю, каким образом можно вставить несколько подряд, если при этом они заходят за другие секции. Это постараюсь реализовать завтра

--- a/index.html
+++ b/index.html
@@ -5,138 +5,153 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Задание 2</title>
+    <title>VIDEO PRODUCTION</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="wrapper">
-        <div class="header">
-            <div class="logo">
-                <img src="#" alt="" class="logo">
-            </div>
-            <nav class="menu">
-                <ul class="menu__list">
-                    <li class="menu__item">Главная</li>
-                    <li class="menu__item">Услуги</li>
-                    <li class="menu__item">Отзывы</li>
-                </ul>
-            </nav>
-            <address class="contacts">
-                <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-                <div class="contacts__workdays">График работы</div>
-            </address>
-        </div>
-
-        <div class="page-content">
-            <main class="main-content">
-                <div class="head__main">
-                    <h1 class="main__title">Снимем для вас креативное видео</h1>
-                    <div class="main__info">Креативный видеопродакшн полного цикла</div>
-                    <button class="main__btn-info">Подробнее</button>
+        <div class="container">
+            <div class="header">
+                <div class="logo">
+                    <img src="./logo/logo.png" alt="video production">
                 </div>
-
-                <div class="services">
-                    <div class="services__block">
-                        <img src="#" alt="1" class="services__img">
-                        <h2 class="services__title">Реклама</h2>
-                        <div class="services__peoples">От 5 человек на проект</div>
-                        <div class="services__days">28 дней работы в среднем</div>
-                        <p class="services__main-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Voluptatum omnis error enim, ipsa illum in sit ex dolores ullam. Ullam quas eos vitae natus
-                            debitis aspernatur rem voluptate molestiae aliquam.</p>
-                        <button class="services__more-info">Подробнее</button>
-                    </div>
-                    <div class="services__block">
-                        <img src="#" alt="2" class="services__img">
-                        <h2 class="services__title">Видео-клип</h2>
-                        <div class="services__peoples">От 7 человек на проект</div>
-                        <div class="services__days">21 дней работы в среднем</div>
-                        <p class="services__main-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Voluptatum omnis error enim, ipsa illum in sit ex dolores ullam. Ullam quas eos vitae natus
-                            debitis aspernatur rem voluptate molestiae aliquam.</p>
-                        <button class="services__more-info">Подробнее</button>
-                    </div>
-                    <div class="services__block">
-                        <img src="#" alt="3" class="services__img">
-                        <h2 class="services__title">Свадьба</h2>
-                        <div class="services__peoples">От 2 человек на проект</div>
-                        <div class="services__days">30 дней работы в среднем</div>
-                        <p class="services__main-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Voluptatum omnis error enim, ipsa illum in sit ex dolores ullam. Ullam quas eos vitae natus
-                            debitis aspernatur rem voluptate molestiae aliquam.</p>
-                        <button class="services__more-info">Подробнее</button>
-                    </div>
-                </div>
-
-                <div class="news_and_promo">
-                    <h2 class="nap__title">Новости и акции</h2>
-                    <div class="nap__promo">
-                        <img src="#" alt="" class="nap__img">
-                        <div class="nap__date">Декабрь 2019</div>
-                        <h2 class="nap__title">Снимем ваш клип на 50% дешевле</h2>
-                        <p class="nap__info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel sapiente
-                            molestias assumenda tenetur qui aspernatur consequatur eum, labore ratione aperiam quidem?
-                            Corrupti nihil est aspernatur rerum sunt itaque inventore perspiciatis.</p>
-                    </div>
-                    <div class="nap__promo">
-                        <img src="#" alt="" class="nap__img">
-                        <div class="nap__date">Декабрь 2019</div>
-                        <h2 class="nap__title">Акция для молодоженов 30%</h2>
-                        <p class="nap__info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus molestias
-                            labore recusandae non est repellat eos, ullam dolores molestiae laudantium sequi suscipit
-                            dolor in quaerat explicabo fugit. Hic, impedit tempora?</p>
-                    </div>
-                    <div class="paginator">
-                        <div class="paginator__display">Страница 1 из 7</div>
-                        <ul class="paginator__list">
-                            <li class="paginator__item">1</li>
-                            <li class="paginator__item">2</li>
-                            <li class="paginator__item">3</li>
-                            <li class="paginator__item">4</li>
-                            <li class="paginator__item">5</li>
-                            <li class="paginator__item">6</li>
-                            <li class="paginator__item">7</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="about-us">
-                    <img src="#" alt="" class="about-us__img">
-                    <div class="about-us__block">
-                        <h2 class="about-us__title">О нас</h2>
-                        <p class="about-us__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta
-                            fugiat architecto itaque voluptatum ea nesciunt possimus quis odit id eos illum eligendi
-                            accusantium autem, rerum eaque nisi nobis a dicta.</p>
-                        <button class="about-us__btn">Подробнее</button>
-                    </div>
-                </div>
-            </main>
-        </div>
-
-        <footer class="footer">
-            <img src="#" alt="" class="footer__logo">
-            <nav class="footer__menu">
-                <ul class="footer__menu_list">
-                    <li class="footer__menu_item">Главная</li>
-                    <li class="footer__menu_item">Услуги</li>
-                    <li class="footer__menu_item">Отзывы</li>
-                </ul>
-            </nav>
-
-            <div class="social">
-                <ul class="social__list">
-                    <li class="social__item"><img src="#" class="social__telegram" alt="telegram"></li>
-                    <li class="social__item"><img src="#" class="social__vk" alt="vk"></li>
-                    <li class="social__item"><img src="#" class="social__facebook" alt="facebook"></li>
-                    <li class="social__item"><img src="#" class="social__instagram" alt="instagram"></li>
-                </ul>
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__item">Главная</li>
+                        <li class="menu__item">Услуги</li>
+                        <li class="menu__item">Отзывы</li>
+                    </ul>
+                </nav>
+                <address class="contacts">
+                    <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+                    <div class="contacts__workdays">График работы</div>
+                </address>
             </div>
 
-            <address class="footer__contacts">
-                <div class="footer__contacts_info">Бесплатный звонок по России</div>
-                <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-            </address>
-        </footer>
+            <div class="page-content">
+                <main class="main-content">
+                    <div class="head__main">
+                        <h1 class="main__title">Снимем для вас креативное видео</h1>
+                        <div class="main__info">Креативный видеопродакшн полного цикла</div>
+                        <div class="main__btn-info"><a href="#">Подробнее</a></div>
+                    </div>
+
+                    <div class="services">
+                        <div class="services__block">
+                            <img src="./icons/tv.png" alt="1" class="services__img">
+                            <h2 class="services__title">Реклама</h2>
+                            <div class="services__info">
+                                <div class="services__peoples">От <span>5</span> человек на проект</div>
+                                <div class="services__days"><span>28</span> дней работы в среднем</div>
+                            </div>
+                            <p class="services__main-text">Креатив и производство рекламы, документального и
+                                корпоративного контента.</p>
+                            <div class="services__more-info">
+                                <button>Подробнее</button>
+                            </div>
+                        </div>
+                        <div class="services__block">
+                            <img src="./icons/clapper.png" alt="2" class="services__img">
+                            <h2 class="services__title">Видео-клип</h2>
+                            <div class="services__info">
+                                <div class="services__peoples">От <span>7</span> человек на проект</div>
+                                <div class="services__days"><span>21</span> дней работы в среднем</div>
+                            </div>
+                            <p class="services__main-text">Вы решили представиться своим слушателям, пополнить свой
+                                творческий багаж качественным видео? Прекрасно! </p>
+                            <div class="services__more-info">
+                                <button>Подробнее</button>
+                            </div>
+                        </div>
+                        <div class="services__block">
+                            <img src="./icons/film.png" alt="3" class="services__img">
+                            <h2 class="services__title">Свадьба</h2>
+                            <div class="services__info">
+                                <div class="services__peoples">От <span>2</span> человек на проект</div>
+                                <div class="services__days"><span>30</span> дней работы в среднем</div>
+                            </div>
+                            <p class="services__main-text">Получите живое видео своего самого счастливого дня, которое
+                                Вы будете пересматривать снова и снова.</p>
+                            <div class="services__more-info">
+                                <button>Подробнее</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="news_and_promo">
+                        <h2 class="nap__title">Новости и акции</h2>
+                        <div class="nap__promo-blocks">
+                            <div class="nap__promo">
+                                <img src="#" alt="" class="nap__img">
+                                <div class="nap__date">Декабрь 2019</div>
+                                <h3 class="nap__promo-title">Снимем ваш клип на 50% дешевле</h3>
+                                <p class="nap__info">В честь Новогодних праздников мы раздаем огромные скидки, успейте
+                                    забронировать даты.</p>
+
+                            </div>
+                            <div class="nap__promo">
+                                <img src="#" alt="" class="nap__img">
+                                <div class="nap__date">Декабрь 2019</div>
+                                <h3 class="nap__promo-title">Акция для молодоженов 30%</h3>
+                                <p class="nap__info">Успевайте забронировать даты. Пока еще есть места на декабрь.
+                                    Удачи и
+                                    всех благ!</p>
+                            </div>
+                        </div>
+                        <div class="paginator">
+                            <div class="paginator__display">Страница 1 из 7</div>
+                            <ul class="paginator__list">
+                                <li class="paginator__item">1</li>
+                                <li class="paginator__item">2</li>
+                                <li class="paginator__item">3</li>
+                                <li class="paginator__item">4</li>
+                                <li class="paginator__item">5</li>
+                                <li class="paginator__item">6</li>
+                                <li class="paginator__item">7</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="about-us">
+                        <div class="about-us__block">
+                            <h2 class="about-us__title">О нас</h2>
+                            <p class="about-us__text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
+                                сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а
+                                начинающему оратору отточить навык публичных выступлений в домашних условиях. </p>
+                            <button class="about-us__btn">Подробнее</button>
+                        </div>
+                        <img src="./img/cameraman.jpg" alt="Камера" class="about-us__img">
+                    </div>
+                </main>
+            </div>
+            <footer class="footer">
+                <a href="#" class="footer__logo"><img src="./logo/logo.png" alt="video production"></a>
+                <nav class="footer__menu">
+                    <ul class="footer__menu_list">
+                        <li class="footer__menu_item">Главная</li>
+                        <li class="footer__menu_item">Услуги</li>
+                        <li class="footer__menu_item">Отзывы</li>
+                    </ul>
+                </nav>  F
+                <div class="social">
+                    <ul class="social__list">
+                        <li class="social__item"><img src="./icons/telegram.svg" class="social__telegram"
+                                alt="telegram"></li>
+                        <li class="social__item"><img src="./icons/vk.svg" class="social__vk" alt="vk"></li>
+                        <li class="social__item"><img src="./icons/f.svg" class="social__facebook" alt="facebook"></li>
+                        <li class="social__item"><img src="./icons/in.svg" class="social__instagram" alt="instagram">
+                        </li>
+                    </ul>
+                </div>
+                <address class="footer__contacts">
+                    <div class="footer__contacts_info">Бесплатный звонок по России</div>
+                    <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+                </address>
+            </footer>
+        </div>
     </div>
 </body>
 
