--- a/index.html
+++ b/index.html
@@ -13,145 +13,149 @@
 
 <body>
     <div class="wrapper">
-        <div class="container">
-            <div class="header">
-                <div class="logo">
-                    <img src="./logo/logo.png" alt="video production">
-                </div>
-                <nav class="menu">
-                    <ul class="menu__list">
-                        <li class="menu__item">Главная</li>
-                        <li class="menu__item">Услуги</li>
-                        <li class="menu__item">Отзывы</li>
-                    </ul>
-                </nav>
-                <address class="contacts">
-                    <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-                    <div class="contacts__workdays">График работы</div>
-                </address>
-            </div>
 
-            <div class="page-content">
+        <section class="hero">
+            <div class="container">
+                <header class="header">
+                    <a href="#" class="logo">
+                        <img src="./logo/logo.png" alt="video production" class="logo__img">
+                    </a>
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__item"><a href="#" class="menu__link">Главная</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Услуги</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                        </ul>
+                    </nav>
+                    <address class="contacts">
+                        <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+                        <div class="contacts__dropdown-title">График работы</div>
+                    </address>
+                </header>
+
                 <main class="main-content">
-                    <div class="head__main">
-                        <h1 class="main__title">Снимем для вас креативное видео</h1>
-                        <div class="main__info">Креативный видеопродакшн полного цикла</div>
-                        <div class="main__btn-info"><a href="#">Подробнее</a></div>
-                    </div>
+                    <div class="hero__content">
+                        <div class="head__main">
+                            <h1 class="main__title">Снимем для вас креативное видео</h1>
+                            <h4 class="main__info">Креативный видеопродакшн полного цикла</h4>
+                            <a href="#" class="main__btn-info">Подробнее</a>
+                        </div>
 
-                    <div class="services">
-                        <div class="services__block">
-                            <img src="./icons/tv.png" alt="1" class="services__img">
-                            <h2 class="services__title">Реклама</h2>
-                            <div class="services__info">
-                                <div class="services__peoples">От <span>5</span> человек на проект</div>
-                                <div class="services__days"><span>28</span> дней работы в среднем</div>
+                        <div class="services">
+                            <div class="services__block">
+                                <img src="./icons/tv.png" alt="1" class="services__img">
+                                <h3 class="services__title">Реклама</h3>
+                                <div class="services__info">
+                                    <div class="services__peoples">От <span>5</span> человек на проект</div>
+                                    <div class="services__days"><span>28</span> дней работы в среднем</div>
+                                </div>
+                                <p class="services__main-text">Креатив и производство рекламы, документального и
+                                    корпоративного контента.</p>
+                                <a href="#" class="services__more-info">Подробнее</a>
                             </div>
-                            <p class="services__main-text">Креатив и производство рекламы, документального и
-                                корпоративного контента.</p>
-                            <div class="services__more-info">
-                                <button>Подробнее</button>
+                            <div class="services__block">
+                                <img src="./icons/clapper.png" alt="2" class="services__img">
+                                <h3 class="services__title">Видео-клип</h3>
+                                <div class="services__info">
+                                    <div class="services__peoples">От <span>7</span> человек на проект</div>
+                                    <div class="services__days"><span>21</span> дней работы в среднем</div>
+                                </div>
+                                <p class="services__main-text">Вы решили представиться своим слушателям, пополнить свой
+                                    творческий багаж качественным видео? Прекрасно! </p>
+                                <a href="#" class="services__more-info">Подробнее</a>
                             </div>
-                        </div>
-                        <div class="services__block">
-                            <img src="./icons/clapper.png" alt="2" class="services__img">
-                            <h2 class="services__title">Видео-клип</h2>
-                            <div class="services__info">
-                                <div class="services__peoples">От <span>7</span> человек на проект</div>
-                                <div class="services__days"><span>21</span> дней работы в среднем</div>
-                            </div>
-                            <p class="services__main-text">Вы решили представиться своим слушателям, пополнить свой
-                                творческий багаж качественным видео? Прекрасно! </p>
-                            <div class="services__more-info">
-                                <button>Подробнее</button>
-                            </div>
-                        </div>
-                        <div class="services__block">
-                            <img src="./icons/film.png" alt="3" class="services__img">
-                            <h2 class="services__title">Свадьба</h2>
-                            <div class="services__info">
-                                <div class="services__peoples">От <span>2</span> человек на проект</div>
-                                <div class="services__days"><span>30</span> дней работы в среднем</div>
-                            </div>
-                            <p class="services__main-text">Получите живое видео своего самого счастливого дня, которое
-                                Вы будете пересматривать снова и снова.</p>
-                            <div class="services__more-info">
-                                <button>Подробнее</button>
+                            <div class="services__block">
+                                <img src="./icons/film.png" alt="3" class="services__img">
+                                <h3 class="services__title">Свадьба</h3>
+                                <div class="services__info">
+                                    <div class="services__peoples">От <span>2</span> человек на проект</div>
+                                    <div class="services__days"><span>30</span> дней работы в среднем</div>
+                                </div>
+                                <p class="services__main-text">Получите живое видео своего самого счастливого дня,
+                                    которое
+                                    Вы будете пересматривать снова и снова.</p>
+                                <a href="#" class="services__more-info">Подробнее</a>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="news_and_promo">
-                        <h2 class="nap__title">Новости и акции</h2>
-                        <div class="nap__promo-blocks">
-                            <div class="nap__promo">
-                                <img src="#" alt="" class="nap__img">
-                                <div class="nap__date">Декабрь 2019</div>
-                                <h3 class="nap__promo-title">Снимем ваш клип на 50% дешевле</h3>
-                                <p class="nap__info">В честь Новогодних праздников мы раздаем огромные скидки, успейте
-                                    забронировать даты.</p>
+                        <div class="news_and_promo">
+                            <h2 class="nap__title">Новости и акции</h2>
+                            <div class="nap__promo-blocks">
+                                <div class="nap__promo">
+                                    <img src="#" alt="" class="nap__img">
+                                    <div class="nap__date">Декабрь 2019</div>
+                                    <h3 class="nap__promo-title">Снимем ваш клип на 50% дешевле</h3>
+                                    <p class="nap__info">В честь Новогодних праздников мы раздаем огромные скидки,
+                                        успейте
+                                        забронировать даты.</p>
 
+                                </div>
+                                <div class="nap__promo">
+                                    <img src="#" alt="" class="nap__img">
+                                    <div class="nap__date">Декабрь 2019</div>
+                                    <h3 class="nap__promo-title">Акция для молодоженов 30%</h3>
+                                    <p class="nap__info">Успевайте забронировать даты. Пока еще есть места на декабрь.
+                                        Удачи и
+                                        всех благ!</p>
+                                </div>
                             </div>
-                            <div class="nap__promo">
-                                <img src="#" alt="" class="nap__img">
-                                <div class="nap__date">Декабрь 2019</div>
-                                <h3 class="nap__promo-title">Акция для молодоженов 30%</h3>
-                                <p class="nap__info">Успевайте забронировать даты. Пока еще есть места на декабрь.
-                                    Удачи и
-                                    всех благ!</p>
+                            <div class="paginator">
+                                <div class="paginator__display">Страница 1 из 7</div>
+                                <ul class="paginator__list">
+                                    <li class="paginator__item">1</li>
+                                    <li class="paginator__item">2</li>
+                                    <li class="paginator__item">3</li>
+                                    <li class="paginator__item">4</li>
+                                    <li class="paginator__item">5</li>
+                                    <li class="paginator__item">6</li>
+                                    <li class="paginator__item">7</li>
+                                </ul>
                             </div>
                         </div>
-                        <div class="paginator">
-                            <div class="paginator__display">Страница 1 из 7</div>
-                            <ul class="paginator__list">
-                                <li class="paginator__item">1</li>
-                                <li class="paginator__item">2</li>
-                                <li class="paginator__item">3</li>
-                                <li class="paginator__item">4</li>
-                                <li class="paginator__item">5</li>
-                                <li class="paginator__item">6</li>
-                                <li class="paginator__item">7</li>
-                            </ul>
-                        </div>
-                    </div>
 
-                    <div class="about-us">
-                        <div class="about-us__block">
-                            <h2 class="about-us__title">О нас</h2>
-                            <p class="about-us__text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
-                                сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а
-                                начинающему оратору отточить навык публичных выступлений в домашних условиях. </p>
-                            <button class="about-us__btn">Подробнее</button>
+                        <div class="about-us">
+                            <div class="about-us__block">
+                                <h3 class="about-us__title">О нас</h3>
+                                <p class="about-us__text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
+                                    сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском
+                                    языке, а
+                                    начинающему оратору отточить навык публичных выступлений в домашних условиях. </p>
+                                <a href="#" class="about-us__btn">Подробнее</a>
+                            </div>
+                            <img src="./img/cameraman.jpg" alt="Камера" class="about-us__img">
                         </div>
-                        <img src="./img/cameraman.jpg" alt="Камера" class="about-us__img">
                     </div>
                 </main>
+
+                <footer class="footer">
+                    <a href="#" class="footer__logo"><img src="./logo/logo.png" alt="video production"></a>
+                    <nav class="footer__menu">
+                        <ul class="footer__menu_list">
+                            <li class="menu__item"><a href="#" class="menu__link">Главная</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Услуги</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                        </ul>
+                    </nav>
+                    <div class="social">
+                        <ul class="social__list">
+                            <li class="social__item"><a href="#" class="social__link"><img src="./icons/telegram.svg"
+                                        class="social__telegram" alt="telegram"></a></li>
+                            <li class="social__item"><a href="#" class="social__link"><img src="./icons/vk.svg"
+                                        class="social__vk" alt="vk"></a></li>
+                            <li class="social__item"><a href="#" class="social__link"><img src="./icons/f.svg"
+                                        class="social__facebook" alt="facebook"></a>
+                            </li>
+                            <li class="social__item"><a href="#" class="social__link"><img src="./icons/in.svg"
+                                        class="social__instagram" alt="instagram"></a></li>
+                        </ul>
+                    </div>
+                    <address class="footer__contacts">
+                        <div class="footer__contacts_info">Бесплатный звонок по России</div>
+                        <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+                    </address>
+                </footer>
             </div>
-            <footer class="footer">
-                <a href="#" class="footer__logo"><img src="./logo/logo.png" alt="video production"></a>
-                <nav class="footer__menu">
-                    <ul class="footer__menu_list">
-                        <li class="footer__menu_item">Главная</li>
-                        <li class="footer__menu_item">Услуги</li>
-                        <li class="footer__menu_item">Отзывы</li>
-                    </ul>
-                </nav>  F
-                <div class="social">
-                    <ul class="social__list">
-                        <li class="social__item"><img src="./icons/telegram.svg" class="social__telegram"
-                                alt="telegram"></li>
-                        <li class="social__item"><img src="./icons/vk.svg" class="social__vk" alt="vk"></li>
-                        <li class="social__item"><img src="./icons/f.svg" class="social__facebook" alt="facebook"></li>
-                        <li class="social__item"><img src="./icons/in.svg" class="social__instagram" alt="instagram">
-                        </li>
-                    </ul>
-                </div>
-                <address class="footer__contacts">
-                    <div class="footer__contacts_info">Бесплатный звонок по России</div>
-                    <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-                </address>
-            </footer>
-        </div>
+        </section>
     </div>
 </body>
 
