--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__item menu__item_active"><a href="#" class="menu__link">Главная</a></li>
-                        <li class="menu__item"><a href="#" class="menu__link">Услуги</a></li>
+                        <li class="menu__item"><a href="./services.html" class="menu__link">Услуги</a></li>
                         <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
                     </ul>
                 </nav>
