--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>VIDEO PRODUCTION</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -94,7 +94,7 @@
                         <div class="nap__promo-blocks">
                             <div class="nap__promo camera">
                                 <img src="#" alt="" class="nap__img">
-                                <div class="nap__date">Декабрь 2019</div>
+                                <time class="nap__date">Декабрь 2019</time>
                                 <h3 class="nap__promo-title">Снимем ваш клип на 50% дешевле</h3>
                                 <p class="nap__info">В честь Новогодних праздников мы раздаем огромные скидки,
                                     успейте
@@ -103,7 +103,7 @@
                             </div>
                             <div class="nap__promo wedding">
                                 <img src="#" alt="" class="nap__img">
-                                <div class="nap__date">Декабрь 2019</div>
+                                <time class="nap__date">Декабрь 2019</time>
                                 <h3 class="nap__promo-title">Акция для молодоженов 30%</h3>
                                 <p class="nap__info">Успевайте забронировать даты. Пока еще есть места на декабрь.
                                     Удачи и
