--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <nav class="footer__menu">
                     <ul class="footer__menu_list">
                         <li class="menu__item menu__item_active"><a href="#" class="menu__link">Главная</a></li>
-                        <li class="menu__item"><a href="#" class="menu__link">Услуги</a></li>
+                        <li class="menu__item"><a href="./services.html" class="menu__link">Услуги</a></li>
                         <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
                     </ul>
                 </nav>
