--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
                 </a>
                 <nav class="menu">
                     <ul class="menu__list">
-                        <li class="menu__item menu__item_active"><a href="#" class="menu__link">Главная</a></li>
+                        <li class="menu__item menu__item_active"><a href="./index.html" class="menu__link">Главная</a></li>
                         <li class="menu__item"><a href="./services.html" class="menu__link">Услуги</a></li>
                         <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
                     </ul>
@@ -52,7 +52,7 @@
                 <a href="#" class="footer__logo"><img src="./logo/logo.png" alt="video production"></a>
                 <nav class="footer__menu">
                     <ul class="footer__menu_list">
-                        <li class="menu__item menu__item_active"><a href="#" class="menu__link">Главная</a></li>
+                        <li class="menu__item menu__item_active"><a href="./index.html" class="menu__link">Главная</a></li>
                         <li class="menu__item"><a href="#" class="menu__link">Услуги</a></li>
                         <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
                     </ul>
