--- a/reviews.html
+++ b/reviews.html
@@ -204,6 +204,10 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="form__btns">
+                        <button type="reset" class="btn btn--color--grey">Очистить</button>
+                        <button type="submit" class="btn btn--color--orange">Отправить</button>
+                    </div>
                 </form>
             </div>
         </section>
